--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
+    <string name="menu_home">Products</string>
+    <string name="menu_gallery">Add new product</string>
     <string name="menu_slideshow">Slideshow</string>
 
     <string name="scan">Scan barcode</string>
